fix background not showing. Now I need to fix transition, which apprarently is impossible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,8 +77,11 @@ button {
 
 #gradient-sidebar {
 	position: absolute;
-	background-color: linear-gradient(var(--gradient-top), var(--main-bg-color));
-	transition: background-color 500ms;
+	background-image: linear-gradient(var(--gradient-top), var(--main-bg-color));
+	-moz-transition: all 0.3s ease;
+   -o-transition: all 0.3s ease;
+   -webkit-transition: all 0.3s ease;
+   transition: all 0.3s ease;
 }
 
 #sidebar {
